--- a/index.html
+++ b/index.html
@@ -514,6 +514,12 @@
         <div class="max-w-7xl mx-auto px-6 relative z-10">
             <div class="text-center mb-16 section-fade">
                 <h2 class="text-4xl font-serif text-white mb-4">Investment Levels</h2>
+                
+                <!-- Discount Banner -->
+                <div class="inline-block border border-lumora-gold text-lumora-gold px-4 py-1.5 text-xs font-bold uppercase tracking-[0.2em] mb-4">
+                    Limited Time Offer: 50% Off
+                </div>
+
                 <p class="text-gray-400">Choose the pace of your growth.</p>
             </div>
 
@@ -522,7 +528,10 @@
                 <!-- Plan 1 -->
                 <div class="border border-gray-800 p-8 rounded-2xl hover:border-gray-600 transition duration-300 section-fade bg-[#0f0f0f]">
                     <h3 class="text-xl font-serif text-white mb-2">The Boutique</h3>
-                    <div class="text-3xl text-gray-300 font-sans font-light mb-6">₹29,999</div>
+                    <div class="mb-6">
+                        <span class="text-gray-500 line-through text-lg block mb-1">₹29,999</span>
+                        <span class="text-3xl text-white font-sans font-light">₹14,999</span>
+                    </div>
                     <ul class="space-y-4 mb-8 text-sm text-gray-400">
                         <li class="flex gap-3"><i class="fa-solid fa-check text-green-500"></i> Custom Dark Mode Store</li>
                         <li class="flex gap-3"><i class="fa-solid fa-check text-green-500"></i> WhatsApp Order Automation</li>
@@ -535,7 +544,10 @@
                 <div class="relative border border-lumora-gold bg-[#141414] p-8 rounded-2xl transform scale-105 shadow-[0_0_30px_rgba(212,175,55,0.1)] section-fade z-20">
                     <div class="absolute top-0 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-lumora-gold text-black text-[10px] font-bold px-3 py-1 uppercase tracking-widest rounded">Recommended</div>
                     <h3 class="text-2xl font-serif text-lumora-gold mb-2">The Atelier</h3>
-                    <div class="text-4xl text-white font-sans font-light mb-6">₹54,999</div>
+                     <div class="mb-6">
+                        <span class="text-gray-500 line-through text-lg block mb-1">₹54,999</span>
+                        <span class="text-4xl text-white font-sans font-light">₹27,499</span>
+                    </div>
                     <div class="h-px w-full bg-gray-800 mb-6"></div>
                     <ul class="space-y-4 mb-8 text-sm text-gray-300">
                         <li class="flex gap-3"><i class="fa-solid fa-check text-lumora-gold"></i> <strong>Hamper Builder Engine</strong></li>
@@ -549,7 +561,10 @@
                 <!-- Plan 3 -->
                 <div class="border border-gray-800 p-8 rounded-2xl hover:border-gray-600 transition duration-300 section-fade bg-[#0f0f0f]">
                     <h3 class="text-xl font-serif text-white mb-2">The Empire</h3>
-                    <div class="text-3xl text-gray-300 font-sans font-light mb-6">₹99,999</div>
+                    <div class="mb-6">
+                        <span class="text-gray-500 line-through text-lg block mb-1">₹99,999</span>
+                        <span class="text-3xl text-white font-sans font-light">₹49,999</span>
+                    </div>
                     <ul class="space-y-4 mb-8 text-sm text-gray-400">
                         <li class="flex gap-3"><i class="fa-solid fa-check text-purple-500"></i> Everything in Atelier</li>
                         <li class="flex gap-3"><i class="fa-solid fa-check text-purple-500"></i> Dedicated Mobile App (iOS/Android)</li>
